# song-viewer

./: .gitignore  CLAUDE.md  README.md  bunfig.toml  index.html  justfile  package-lock.json  package.json  react-router.config.ts  test-setup.ts  tsconfig.app.json  vite.config.ts
catalog-manager/: README.md  pyproject.toml
catalog-manager/catalog/: catalog.yml
catalog-manager/catalog/dia-de-sol-aa9a/: metadata.yml
catalog-manager/catalog/diciembre-29-en-casa-9594/: metadata.yml
catalog-manager/catalog/platillo-64cd/: metadata.yml
catalog-manager/catalog/tracks/27-club-caf8/: metadata.yml
catalog-manager/catalog/tracks/bajo-la-lluvia-d693/: metadata.yml
catalog-manager/catalog/tracks/busqueda-5e17/: metadata.yml
catalog-manager/catalog/tracks/diciembre-29-en-casa-9594/: metadata.yml
catalog-manager/catalog/tracks/ivan-perdomo-busqueda/: metadata.yml  notes.md
catalog-manager/catalog/tracks/ivan-perdomo-dia-de-sol/: metadata.yml  notes.md
catalog-manager/catalog/tracks/ivan-perdomo-diciembre-29-en-casa/: metadata.yml  notes.md
catalog-manager/catalog/tracks/locura-92fe/: metadata.yml
catalog-manager/catalog/tracks/parque-013c/: metadata.yml
catalog-manager/catalog/two-and-a-half-men-0082/: metadata.yml
catalog-manager/catalog/un-viaje-9aed/: metadata.yml
catalog-manager/catalog/verso-feliz-b019/: metadata.yml
catalog-manager/catalog/versos-8ddb/: metadata.yml
catalog-manager/src/catalog_manager/: __init__.py  __main__.py  audio_processor.py  manager.py  reaper_parser.py  utils.py
catalog-manager/tests/: __init__.py  test_utils.py
(+62 files in other folders)
