[project]
name = "catalog-manager"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Ivan Perdomo", email = "iperdomo2016@gmail.com" }
]
dependencies = [
    "click>=8.1.7",
    "pyyaml>=6.0.2",
    "pydantic>=2.10.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
catalog-manager = "catalog_manager.__main__:main"

[build-system]
requires = ["uv_build>=0.8.16,<0.9.0"]
build-backend = "uv_build"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4"
]
